2021-08-31 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Changed default values of few convars
	* [RenderSystem] Changed default values of renderer convars

2021-08-29 Dusan Jocic <dusanjocic@msn.com>
	* [Cumulative Update] Misc changes

2021-08-28 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Changed default value for renderer convar

2021-08-27 Dusan Jocic <dusanjocic@msn.com>
	* [Authentication Server] Turned off "authStatus" until we get new PHP based website
	* [Console] Turn off chatlog
	* [Network] Do not allow communication of the '%' character.
	* [Console] Do not execute reconnect command after explicit command

2021-08-26 Dusan Jocic <dusanjocic@msn.com>
	* [Cumulative Update] Misc changes

2021-08-24 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Read from snapshots Tremulous specific convars
	
2021-08-24 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Moved common system to C++ file
	
2021-08-22 Dusan Jocic <dusanjocic@msn.com>
	* [Console] Added Timestamps to in-game console
	* [Console] Add chatlogs to engine

2021-08-21 Dusan Jocic <dusanjocic@msn.com>
	* [Console] Improved engine console copying into system os clipboard
	* [Console] Add possibility to copy engine console into system os clipboard

2021-08-20 Dusan Jocic <dusanjocic@msn.com>
	* [Cumulative Update] Misc changes

2021-07-22 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Added foliage surface

2021-07-18 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Misc fixes
	* [Mac] Some work to get Macintosh build fixed
	* [Mac] More work for Macintosh build

2021-07-04 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Misc changes
	* [Filesystem] Introduced "fs_texturesfolder", "fs_soundsFolder" and "fs_modelsFolder"
	* [Misc] Misc changes
	* [RenderSystem] Fixed external lightmaps

2021-06-14 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Renderer dynamic module should have dot (.) before arch