@@ -174,29 +174,27 @@ void idSoundSystemLocal::Init(void) {
                          "Toggle weather sound is initialized or not (on next game)");
 
     if(!cv->integer) {
-        common->Printf("not initializing.\n");
+        common->Printf("idSoundSystemLocal::Init - Sound disabled.\n");
         common->Printf("------------------------------------\n");
-        return;
-    }
-
-    codec_init();
-
-    cv = cvarSystem->Get("s_usemodule", "1", CVAR_ARCHIVE | CVAR_LATCH,
-                         "Toggle using a sound system module.");
-
-    if(!cv->integer) {
         useBuiltin = true;
-    } else {
+    }
+    else
+    {
+        codec_init();
+
+        cv = cvarSystem->Get("s_usemodule", "1", CVAR_ARCHIVE | CVAR_LATCH,
+            "Toggle using a sound system module.");
+
         useBuiltin = false;
 
-        if(!S_InitModule()) {
+        if (!S_InitModule()) {
             useBuiltin = true;
         }
-    }
 
-    if(useBuiltin) {
-        common->Printf("using builtin sound system\n");
-        SOrig_Init();
+        if (useBuiltin) {
+            common->Printf("using builtin sound system\n");
+            SOrig_Init();
+        }
     }
 
     common->Printf("------------------------------------\n");
